--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <i class="material-icons">mic</i>
             </div>
 
-            <p class="text-large">Sag' ein paar Worte über deine Laune. Wir analysieren das gesagte und Speichern deinen Gemütszustand.</p>
+            <p class="text-large">Sag' ein paar Worte über deine Laune. Wir analysieren das gesagte und speichern deinen Gemütszustand.</p>
         </div>
     </div>
 </div>
@@ -119,13 +119,13 @@
         <div class="pdgt++ w-1/1 grid__item">
             <h1>Wie fühlst du dich?</h1>
 
-            <p class="text-large">Du fühlst dich gutm aber bist etwas müde.</p>
+            <p class="text-large">Du fühlst dich gut aber bist etwas müde.</p>
             <p class="text-large">Ist das korrekt?</p>
         </div>
     </div>
     <div class="grid pdg">
         <div class="w-1/2 grid__item">
-            <button class="button-red" data-target="page-track">
+            <button class="button-red" data-target="page-track-mic">
                 <i class="material-icons pdg0">clear</i>
             </button>
         </div>
